Archive2/23/37124e6af0c12f/output
In file included from main.cpp:2:
In file included from /usr/local/include/boost/fusion/adapted.hpp:11:
In file included from /usr/local/include/boost/fusion/adapted/adt.hpp:13:
In file included from /usr/local/include/boost/fusion/adapted/adt/adapt_assoc_adt_named.hpp:11:
In file included from /usr/local/include/boost/fusion/adapted/adt/adapt_assoc_adt.hpp:16:
In file included from /usr/local/include/boost/type_traits/add_reference.hpp:12:
In file included from /usr/local/include/boost/type_traits/is_reference.hpp:15:
In file included from /usr/local/include/boost/type_traits/config.hpp:13:
In file included from /usr/local/include/boost/config.hpp:40:
In file included from /usr/local/include/boost/config/select_stdlib_config.hpp:18:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/cstddef:51:11: error: no member named 'max_align_t' in the global namespace
  using ::max_align_t;
        ~~^
1 error generated.
